# macos_restore

./: .gitignore  README.md  com_apple_macOSIPSW.xml  launcher.sh  pyproject.toml  requirements.txt  toolbox.sh
.github/workflows/: check-ipsw-change.yml
macos_restore/: __main__.py  download_xml.py
scripts/mk/: python-rules.mk
